Repalce `class=.separator.divider` with CSS
It is not valid to put `<span>`s inside a `<ul>` not inside a `<li>`.

See here for CSS info: https://stackoverflow.com/questions/20736211/adding-hr-using-the-after-selector

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -233,22 +233,15 @@ hr {
 	text-align: center;
 }
 
-span.separator {
-	display: block;
+article.post {
 	margin: 42px 0 48px 0;
-	width: 100%;
 }
 
-span.divider {
+article.post::after {
 	display: block;
-	width: 100%;
+	content: '';
 	background-color: #eee;
 	height: 1px;
-	margin: 0 auto;
-}
-
-span.separator:last-child {
-	display: none;
 }
 
 span.code { font-family:Menlo, Monaco, Courier; background-color:#EEE; font-size:14px; }
