--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -207,8 +207,8 @@ em, i {
 }
 
 sup {
-    vertical-align: super;
-    font-size: smaller;
+	vertical-align: super;
+	font-size: smaller;
 }
 
 .post header {
@@ -337,7 +337,7 @@ Post List
 
 /* Footer */
 
-footer #wrapper {
+footer {
 	margin: 0 auto;
 	text-align: center;
 	padding: 35px 0 80px 0;
@@ -464,7 +464,7 @@ h2.headline {
 /* Media Queries */
 @media screen and (max-width: 540px) {
 
-	footer #wrapper {
+	footer {
 		padding: 35px 0 60px 0;
 	}
 
