--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,13 +3,13 @@
 {{ partial "head.html" . }}
 <body>
   {{ partial "header.html" . }}
-  <section id="wrapper" {{ if eq .File.Dir "about/" }} class="bio" {{ end }}>
-	{{ block "main" . }}{{ end }}
-  </section>
+  <main id="wrapper" {{ if eq .File.Dir "about/" }} class="bio" {{ end }}>
+    {{- block "main" . -}}{{- end -}}
+  </main>
   {{ partial "footer.html" . }}
   {{ partial "custom_footer.html" . }}
-		{{ range .Site.Params.plugins_js }}
-			<script src="{{ . }}"></script>
-		{{ end }}
+  {{ range .Site.Params.plugins_js -}}
+    <script src="{{ . }}"></script>
+  {{- end }}
 </body>
 </html>
