--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -30,7 +30,7 @@ body {
 
 /* Profile */
 
-.profile #wrapper {
+.profile {
 	margin: 0 auto;
 	text-align: center;
 	padding: 80px 0;
@@ -468,7 +468,7 @@ h2.headline {
 		padding: 35px 0 60px 0;
 	}
 
-	.profile #wrapper {
+	.profile {
 		margin: 0 auto;
 		text-align: center;
 		padding: 70px 0 40px 0;
