--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -21,13 +21,13 @@
   <footer id="post-meta" class="clearfix p-author h-card">
     <a href="/">
       {{- if .Params.author }}
-      <img class="u-photo avatar" src="{{ .Params.author.avatar }}" width="96" height="96">
+      <img class="u-photo avatar" src="{{ .Params.author.avatar }}" width="96" height="96" alt="{{ .Site.Author.name }}" />
       <div>
         <span class="p-name dark">{{ .Params.author.name }}</span>
         <span><a rel="author" class="u-url" href="https://micro.blog/{{ .Params.author.username }}">@{{ .Params.author.username }}</a></span>
       </div>
       {{- else -}}
-      <img class="u-photo avatar" src="{{ .Site.Author.avatar }}" width="96" height="96">
+      <img class="u-photo avatar" src="{{ .Site.Author.avatar }}" width="96" height="96" alt="{{ .Site.Author.name }}" />
       <div>
         <span class="p-name dark">{{ .Site.Author.name }}</span>
         <span><a rel="author" class="u-url" href="https://micro.blog/{{ .Site.Author.username }}">@{{ .Site.Author.username }}</a></span>
