--- a/layouts/reply/single.html
+++ b/layouts/reply/single.html
@@ -23,7 +23,7 @@
   </section>
   <footer id="post-meta" class="clearfix p-author h-card">
     <a href="/">
-      <img class="u-photo avatar" src="{{ .Site.Author.avatar }}" width="96" height="96">
+      <img class="u-photo avatar" src="{{ .Site.Author.avatar }}" width="96" height="96" alt="{{ .Site.Author.name }}" />
       <div>
         <span class="p-name dark">{{ .Site.Author.name }}</span>
         <span><a rel="author" class="u-url" href="https://micro.blog/{{ .Site.Author.username }}">@{{ .Site.Author.username }}</a></span>
