--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,8 +1,8 @@
 {{ define "main" -}}
 <article class="h-entry post">
-  <header>
+  <header class="post-header">
     {{ with .Title -}}
-    <h1 class="p-name">{{ . }}</h1>
+    <h1 class="p-name post-title">{{ . }}</h1>
     {{- end }}
   </header>
   <section class="e-content post-body">
