--- a/layouts/partials/post-list.html
+++ b/layouts/partials/post-list.html
@@ -1,4 +1,4 @@
-<ul id="post-list">
+<ul id="post-list h-feed">
 
 {{ if or .IsHome .Site.Params.paginate_categories }}
 	{{ $paginator := .Paginate (where .Pages.ByDate.Reverse "Type" "post") }}
