--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -18,7 +18,7 @@
   <script type="text/javascript" src="https://micro.blog/conversation.js?url={{ .Permalink }}"></script>
   {{- end }}
 
-  <footer id="post-meta" class="clearfix p-author h-card">
+  <footer class="post-meta clearfix p-author h-card">
     <a href="/">
       {{- if .Params.author }}
       <img class="u-photo avatar" src="{{ .Params.author.avatar }}" width="96" height="96" alt="{{ .Site.Author.name }}" />
