--- a/layouts/reply/single.html
+++ b/layouts/reply/single.html
@@ -21,7 +21,7 @@
   <section class="e-content post-body">
       {{- .Content -}}
   </section>
-  <footer id="post-meta" class="clearfix p-author h-card">
+  <footer class="post-meta clearfix p-author h-card">
     <a href="/">
       <img class="u-photo avatar" src="{{ .Site.Author.avatar }}" width="96" height="96" alt="{{ .Site.Author.name }}" />
       <div>
