--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,3 +1,6 @@
 {{ define "main" }}
+  {{ with .Content }}
+    <div class="microblog_category_intro">{{ . }}</div>
+  {{ end }}
   {{ partial "post-list.html" . }}
 {{ end }}
